# martial.ai

./: .gitignore  README.md  docker-compose.yml  load_secrets.sh  pyproject.toml
algorithm/: blast.py  create_embeddings.py  find_k_nearest.py  find_most_common_docs.py  measure_distance.py  run_algorithm.py
app/: Dockerfile  config.py  main.py  models.py  pyproject.toml
app/algorithm/: blast.py  create_embeddings.py  find_k_nearest.py  run_algorithm.py
database/: setup.py
docs/: DOCUMENTATION.md  proces.drawio  rozwiazanie.drawio
frontend/: .env.example  Dockerfile  README.md  angular.json  package-lock.json  package.json  postcss.config.js.test  tailwind.config.js
frontend/db/: db.json  db.json.example
frontend/src/: App.css  App.jsx  index.css  main.jsx  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts  store.js
frontend/src/app/api/: apiSlice.js
frontend/src/app/component/about/: about.component.html
frontend/src/app/component/footer/: footer.component.html  footer.component.scss
frontend/src/app/component/header/: header.component.html  header.component.ts
frontend/src/app/component/home/: home.component.html
frontend/src/app/component/navigation/: navigation.component.html  navigation.component.ts
frontend/src/app/components/about/: about.component.html  about.component.scss
frontend/src/app/components/footer/: footer.component.scss
frontend/src/app/components/header/: header.component.html  header.component.scss  header.component.ts
frontend/src/app/components/history/: history.component.html  history.component.scss  history.component.ts
frontend/src/app/components/history-edit/: history-edit.component.html  history-edit.component.scss  history-edit.component.spec.ts  history-edit.component.ts
frontend/src/app/components/home/: home.component.html
frontend/src/app/components/navigation/: navigation.component.html  navigation.component.ts
frontend/src/app/interfaces/: history.ts
frontend/src/app/services/api/: api.service.ts
frontend/src/components/: AlertError.jsx  DashDrawer.jsx  DashFooter.jsx  DashHeader.jsx  DashHome.jsx  DashLayout.jsx  Home.jsx  Loading.jsx
frontend/src/features/History/: AddHistory.jsx  AddHistoryByFile.jsx  BasicHistoryList.jsx  History.jsx  HistoryList.jsx  HistoryView.jsx  historyApiSlice.js
frontend/src/features/PlagiarismAssessment/: AddPlagiarismAssessment.jsx  PlagiarismAssessment.jsx  plagiarismAssessmentSlice.js
frontend/src/features/auth/: Login.jsx
tests/: algo_test.py  conftest.py  test_blast.py  test_create_embeddings.py  test_data.py  test_find_most_common_doc.py  test_k_nearest.py  test_main.py  test_run_algorithm.py
tests/test_data/: test.docx  test_empty.docx
