[tool.poetry]
name = "martial-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "martial"}]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.7.2"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
