[tool.poetry]
name = "app"
version = "0.1.0"
description = "martial.ai"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.32.0"
psycopg2 = "^2.9.10"
pydantic = "^2.10.2"
pytest = "^8.3.3"
python-docx = "^1.1.2"
docx = "^0.2.4"
pypdf = "^5.1.0"
python-multipart = "^0.0.19"
nltk = "^3.9.1"
openai = "^1.58.1"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"
ruff = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
